fixed pictures path

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <img src="/images/hc.png" alt="herocorp logo grande taille rouge" id="bigLogo">
+    <img src="./images/hc.png" alt="herocorp logo grande taille rouge" id="bigLogo">
     <main>
         <h1>
             Hero Corp <span class="framed">La série</span> 
