fixed pictures path

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Herocorp</title>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <img src="./images/hc.png" alt="herocorp logo grande taille rouge" id="bigLogo">
+    <img src="images/hc.png" alt="herocorp logo grande taille rouge" id="bigLogo">
     <main>
         <h1>
             Hero Corp <span class="framed">La série</span> 
@@ -21,7 +21,7 @@
 <section class="description">
     <h2>Présentation</h2>
 
-    <img src="/images/hc-logo.png" alt="herocorp logo petite taille noir" id="smallLogo">
+    <img src="images/hc-logo.png" alt="herocorp logo petite taille noir" id="smallLogo">
     <p>
         Hero Corp est une série télévisée française fantastique et humoristique, produite par CALT, créée par Simon
         Astier et Alban Lenoir, réalisée par Simon Astier et écrite par Arnaud Joyet et Simon Astier.
@@ -82,7 +82,7 @@
     </h2>
 
     <div class="imageFromTheShow">
-        <img src="/images/groupe.jpg" alt="les acteurs de herocorp au début de la série" id="actorsPicture">
+        <img src="images/groupe.jpg" alt="les acteurs de herocorp au début de la série" id="actorsPicture">
         <h3>
             Prêt à l'action
         </h3>
@@ -92,7 +92,7 @@
     </div>
 
     <div class="imageFromTheShow">
-        <img src="/images/hc-logo.png" alt="herocorp logo petite taille noir" id="logoPicture">
+        <img src="images/hc-logo.png" alt="herocorp logo petite taille noir" id="logoPicture">
         <h3>
             Logo
         </h3>
@@ -102,7 +102,7 @@
     </div>
 
     <div class="imageFromTheShow">
-        <img src="/images/groupe-costumes.jpg" alt="l'équipe d'herocorp en costume" id="actorsInCostumes">
+        <img src="images/groupe-costumes.jpg" alt="l'équipe d'herocorp en costume" id="actorsInCostumes">
         <h3>
             En costume
         </h3>
