fixed pictures path

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <img src="images/hc.png" alt="herocorp logo grande taille rouge" id="bigLogo">
+    <img src="/images/hc.png" alt="herocorp logo grande taille rouge" id="bigLogo">
     <main>
         <h1>
             Hero Corp <span class="framed">La série</span> 
@@ -21,7 +21,7 @@
 <section class="description">
     <h2>Présentation</h2>
 
-    <img src="images/hc-logo.png" alt="herocorp logo petite taille noir" id="smallLogo">
+    <img src="./images/hc-logo.png" alt="herocorp logo petite taille noir" id="smallLogo">
     <p>
         Hero Corp est une série télévisée française fantastique et humoristique, produite par CALT, créée par Simon
         Astier et Alban Lenoir, réalisée par Simon Astier et écrite par Arnaud Joyet et Simon Astier.
